@@ -1,3 +1,5 @@
+* Pass an array with name elements to pass through
+
 version 0.11
 
 * Process UL and OL lists
